--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ a: Yes
 		a: No
 			Q(1.1.3.2): Thank you for visiting our site. Check back with us if you find that you have a unique invention that you would like to protect!
 a: No
-	Q(1.2): Are you interested in learning more about consumer Trademark rights?
+	Q(1.2): Are you interested in learning more about Trademark rights?
 	a: Yes
 		Q(1.2.1): Awesome! To learn more about Trademark Protection click &lt;a href="http://www.uspot.gov/trademark"&gt; here &lt;/a&gt; to learn more.
 	a: No
@@ -313,7 +313,7 @@ a: No
 </div><div id='Q-1.1.3' name='Q-1.1.3' style='display:none;'> Do you have a unique invention?
 </div><div id='Q-1.1.3.1' name='Q-1.1.3.1' style='display:none;'> Awesome! To learn more about Patent Protection visit this <a href="http://www.uspto.gov/patent"> website </a> to learn more about protecting your invention. Good Luck!
 </div><div id='Q-1.1.3.2' name='Q-1.1.3.2' style='display:none;'> Thank you for visiting our site. Check back with us if you find that you have a unique invention that you would like to protect!
-</div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about consumer Trademark rights?
+</div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about Trademark rights?
 </div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspot.gov/trademark"> here </a> to learn more.
 </div><div id='Q-1.2.2' name='Q-1.2.2' style='display:none;'> Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website <a href="http://www.uspto.gov"> here </a> for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
 </div><div id='A-1.1' name='A-1.1' style='display:none;'> Yes
@@ -385,7 +385,7 @@ a: No
 </div><div id='Q-1.1.3' name='Q-1.1.3' style='display:none;'> Do you have a unique invention?
 </div><div id='Q-1.1.3.1' name='Q-1.1.3.1' style='display:none;'> Awesome! To learn more about Patent Protection visit this <a href="http://www.uspto.gov/patent"> website </a> to learn more about protecting your invention. Good Luck!
 </div><div id='Q-1.1.3.2' name='Q-1.1.3.2' style='display:none;'> Thank you for visiting our site. Check back with us if you find that you have a unique invention that you would like to protect!
-</div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about consumer Trademark rights?
+</div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about Trademark rights?
 </div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspot.gov/trademark"> here </a> to learn more.
 </div><div id='Q-1.2.2' name='Q-1.2.2' style='display:none;'> Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website <a href="http://www.uspto.gov"> here </a> for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
 </div><div id='A-1.1' name='A-1.1' style='display:none;'> Yes
