--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ a: Yes
 					a: No
 						Q(1.1.1.1.1.1.2): Check &lt;a href="http://www.uspto.gov"&gt; here first &lt;/a&gt; to make sure your phrase is eligible for a Trademark application. Once you have done so, check back with us to find out the next steps. Good luck!
 					a: I don't know how.
-						Q(1.1.1.1.1.1.3): No problem. Check out this &lt;a href= "http://www.uspot.gov/trademark"&gt; website &lt;/a&gt; to see if your phrase is already registered with another user.
+						Q(1.1.1.1.1.1.3): No problem. Check out this &lt;a href= "http://www.uspto.gov/trademark"&gt; website &lt;/a&gt; to see if your phrase is already registered with another user.
 				a: No
 					Q(1.1.1.1.1.2):GOTO:1.1.1.1.1.3
 				a: Unsure
@@ -252,7 +252,7 @@ a: Yes
 				a: No
 					Q(1.1.1.2.1.2):GOTO:1.1.1.2.1.3
 				a: I don't know how.		
-					Q(1.1.1.2.1.3): No problem. Check out this &lt;a href= "http://www.uspot.gov/trademark"&gt; website &lt;/a&gt; to see if your symbol is registered with another user. 
+					Q(1.1.1.2.1.3): No problem. Check out this &lt;a href= "http://www.uspto.gov/trademark"&gt; website &lt;/a&gt; to see if your symbol is registered with another user. 
 			a: No
 				Q(1.1.1.2.2): No problem. In order to move forward, you would need a copy of your symbol to include with your application. Once you have a copy of your symbol, check back with us to see the next steps in order to file your Trademark application. Good luck!
 		a: Both
