--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	}
 </style>
 <FORM name="FORM" id="FORM"><div id="conversation" style="margin:15px auto 0 auto;padding:0 15px;max-width:500px"><div id='QandA' class='QandA'><div style='padding:15px;background:#ddffdd;text-align:center;'>Loading QnA...</div></div><div id='Choices' class='choices'></div><div id='rawmarkup' style='display:none;'>
-Q(1): Are you interested in preserving your right to something unique?
+Q(1): This program will allow users to understand the key differences between a Trademark and a Patent. This interactive question and answer system allow consumers to determine whether or not they are eligible for a Trademark or a Patent license. The questions are designed as an initial "screening" process for consumers to determine their initial eligibility for either application.<p></p>Are you interested in preserving your right to something unique?
 a: Yes
 	Q(1.1): Do you have a unique phrase, symbol or both?
 	a: Yes
