--- a/index.html
+++ b/index.html
@@ -277,10 +277,11 @@ a: Yes
 a: No
 	Q(1.2): Are you interested in learning more about Trademark rights?
 	a: Yes
-		Q(1.2.1): Awesome! To learn more about Trademark Protection click &lt;a href="http://www.uspot.gov/trademark"&gt; here &lt;/a&gt; to learn more.
+		Q(1.2.1): Awesome! To learn more about Trademark Protection click &lt;a href="http://www.uspto.gov/trademark"&gt; here &lt;/a&gt; to learn more.
 	a: No
 		Q(1.2.2): Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website &lt;a href="http://www.uspto.gov"&gt; here &lt;/a&gt; for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
-</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> Are you interested in preserving your right to something unique?
+</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> This program will allow users to understand the key differences between a Trademark and a Patent. This interactive question and answer system allow consumers to determine whether or not they are eligible for a Trademark or a Patent license. The questions are designed as an initial "screening" process for consumers to determine their initial eligibility for either application. 
+
 </div><div id='Q-1.1' name='Q-1.1' style='display:none;'> Do you have a unique phrase, symbol or both?
 </div><div id='Q-1.1.1' name='Q-1.1.1' style='display:none;'> Which one?
 </div><div id='Q-1.1.1.1' name='Q-1.1.1.1' style='display:none;'> What is your phrase?
@@ -315,7 +316,7 @@ a: No
 </div><div id='Q-1.1.3.1' name='Q-1.1.3.1' style='display:none;'> Awesome! To learn more about Patent Protection visit this <a href="http://www.uspto.gov/patent"> website </a> to learn more about protecting your invention. Good Luck!
 </div><div id='Q-1.1.3.2' name='Q-1.1.3.2' style='display:none;'> Thank you for visiting our site. Check back with us if you find that you have a unique invention that you would like to protect!
 </div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about Trademark rights?
-</div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspot.gov/trademark"> here </a> to learn more.
+</div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspto.gov/trademark"> here </a> to learn more.
 </div><div id='Q-1.2.2' name='Q-1.2.2' style='display:none;'> Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website <a href="http://www.uspto.gov"> here </a> for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
 </div><div id='A-1.1' name='A-1.1' style='display:none;'> Yes
 </div><div id='A-href-1.1' name='A-href-1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1' name='A-target-1.1' style='display:none;'></div><div id='X-1.1' name='X-1.1' style='display:none;'></div><div id='A-1.1.1' name='A-1.1.1' style='display:none;'> Yes
@@ -366,7 +367,7 @@ a: No
 </div><div id='Q-1.1.1.1.1.1.1.2.1' name='Q-1.1.1.1.1.1.1.2.1' style='display:none;'>GOTO:1.1.1.1.1.1.1.1.2
 </div><div id='Q-1.1.1.1.1.1.1.2.2' name='Q-1.1.1.1.1.1.1.2.2' style='display:none;'>GOTO:1.1.1.1.1.1.1.1.2 
 </div><div id='Q-1.1.1.1.1.1.2' name='Q-1.1.1.1.1.1.2' style='display:none;'> Check <a href="http://www.uspto.gov"> here first </a> to make sure your phrase is eligible for a Trademark application. Once you have done so, check back with us to find out the next steps. Good luck!
-</div><div id='Q-1.1.1.1.1.1.3' name='Q-1.1.1.1.1.1.3' style='display:none;'> No problem. Check out this <a href= "http://www.uspot.gov/trademark"> website </a> to see if your phrase is already registered with another user.
+</div><div id='Q-1.1.1.1.1.1.3' name='Q-1.1.1.1.1.1.3' style='display:none;'> No problem. Check out this <a href= "http://www.uspto.gov/trademark"> website </a> to see if your phrase is already registered with another user.
 </div><div id='Q-1.1.1.1.1.2' name='Q-1.1.1.1.1.2' style='display:none;'>GOTO:1.1.1.1.1.3
 </div><div id='Q-1.1.1.1.1.3' name='Q-1.1.1.1.1.3' style='display:none;'> No problem. If you ever decide to share your unique phrase with the world, <a href="http://www.uspto.gov"> search <a/> to make sure that another consumer has not filed rights to your phrase. Have a great day!
 </div><div id='Q-1.1.1.2' name='Q-1.1.1.2' style='display:none;'> Do you have a copy of your symbol saved on your computer?
@@ -375,7 +376,7 @@ a: No
 </div><div id='Q-1.1.1.2.1.1.1' name='Q-1.1.1.2.1.1.1' style='display:none;'>GOTO:1.1.1.3.2
 </div><div id='Q-1.1.1.2.1.1.2' name='Q-1.1.1.2.1.1.2' style='display:none;'>GOTO:1.1.1.1.1.1.1.2
 </div><div id='Q-1.1.1.2.1.2' name='Q-1.1.1.2.1.2' style='display:none;'>GOTO:1.1.1.2.1.3
-</div><div id='Q-1.1.1.2.1.3' name='Q-1.1.1.2.1.3' style='display:none;'> No problem. Check out this <a href= "http://www.uspot.gov/trademark"> website </a> to see if your symbol is registered with another user. 
+</div><div id='Q-1.1.1.2.1.3' name='Q-1.1.1.2.1.3' style='display:none;'> No problem. Check out this <a href= "http://www.uspto.gov/trademark"> website </a> to see if your symbol is registered with another user. 
 </div><div id='Q-1.1.1.2.2' name='Q-1.1.1.2.2' style='display:none;'> No problem. In order to move forward, you would need a copy of your symbol to include with your application. Once you have a copy of your symbol, check back with us to see the next steps in order to file your Trademark application. Good luck!
 </div><div id='Q-1.1.1.3' name='Q-1.1.1.3' style='display:none;'>Did you come up with your phrase and symbol on your own?
 </div><div id='Q-1.1.1.3.1' name='Q-1.1.1.3.1' style='display:none;'> Which would you like to check first?
@@ -387,7 +388,7 @@ a: No
 </div><div id='Q-1.1.3.1' name='Q-1.1.3.1' style='display:none;'> Awesome! To learn more about Patent Protection visit this <a href="http://www.uspto.gov/patent"> website </a> to learn more about protecting your invention. Good Luck!
 </div><div id='Q-1.1.3.2' name='Q-1.1.3.2' style='display:none;'> Thank you for visiting our site. Check back with us if you find that you have a unique invention that you would like to protect!
 </div><div id='Q-1.2' name='Q-1.2' style='display:none;'> Are you interested in learning more about Trademark rights?
-</div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspot.gov/trademark"> here </a> to learn more.
+</div><div id='Q-1.2.1' name='Q-1.2.1' style='display:none;'> Awesome! To learn more about Trademark Protection click <a href="http://www.uspto.gov/trademark"> here </a> to learn more.
 </div><div id='Q-1.2.2' name='Q-1.2.2' style='display:none;'> Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website <a href="http://www.uspto.gov"> here </a> for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
 </div><div id='A-1.1' name='A-1.1' style='display:none;'> Yes
 </div><div id='A-href-1.1' name='A-href-1.1' style='display:none;'>javascript:void('');</div><div id='A-target-1.1' name='A-target-1.1' style='display:none;'></div><div id='X-1.1' name='X-1.1' style='display:none;'></div><div id='A-1.1.1' name='A-1.1.1' style='display:none;'> Yes
