--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@ a: No
 		Q(1.2.1): Awesome! To learn more about Trademark Protection click &lt;a href="http://www.uspto.gov/trademark"&gt; here &lt;/a&gt; to learn more.
 	a: No
 		Q(1.2.2): Thank you for visiting our site. If you change your mind at any time, feel free to check out the USPTO website &lt;a href="http://www.uspto.gov"&gt; here &lt;/a&gt; for additional information on Trademarks, Patents and Copyright Laws. Goodbye!
-</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> This program will allow users to understand the key differences between a Trademark and a Patent. This interactive question and answer system allow consumers to determine whether or not they are eligible for a Trademark or a Patent license. The questions are designed as an initial "screening" process for consumers to determine their initial eligibility for either application. 
-
+</div><div id="ondeck" name="ondeck"><div id="doc" name="doc" style="display:none;"></div><div id='Q-1' name='Q-1' style='display:none;'> This program will allow users to understand the key differences between a Trademark and a Patent. This interactive question and answer system allow consumers to determine whether or not they are eligible for a Trademark or a Patent license. The questions are designed as an initial "screening" process for consumers to determine their initial eligibility for either application. Are you interested in preserving your right to something unique?
 </div><div id='Q-1.1' name='Q-1.1' style='display:none;'> Do you have a unique phrase, symbol or both?
 </div><div id='Q-1.1.1' name='Q-1.1.1' style='display:none;'> Which one?
 </div><div id='Q-1.1.1.1' name='Q-1.1.1.1' style='display:none;'> What is your phrase?
